--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,9 @@ authors = [
   {name = "Nalini Kumar", email = "nalinikumar.devi@gmail.com"},
 ]
 name = "lab1_package"
-version = "0.1.2"
+version = "0.1.3"
 readme = "README.md"
 
-[tool.setuptools.packages.find]
-where = ["src"]
+[tool.setuptools]
+packages = {find = {where = ["src"]}}
+package-dir = {""="src"}
