--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,9 @@ authors = [
   {name = "Nalini Kumar", email = "nalinikumar.devi@gmail.com"},
 ]
 name = "lab1_package"
-version = "0.1.5"
+version = "0.1.6"
 readme = "README.md"
 
 [tool.setuptools]
-packages = {find = {where = ["lab1_package"]}}
-package-dir = {""="lab1_package"}
+packages = {find = {where = ["src"]}}
+package-dir = {""="src"}
